fix:gateway is failing with redis exception